# poetry-template

./: LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/pkgname/: dummy.py
tests/: test_dummy.py
